# rukkiepulse

./: .gitignore  .goreleaser.yaml  README.md  go.mod  go.sum  plan 1.md  rukkie.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-dashboard.yml  deploy-functions.yml  docs.yml  publish-node.yml  publish-python.yml  release.yml
agents/node/: package-lock.json  package.json
agents/python/: README.md  pyproject.toml
agents/python/rukkie_agent/: __init__.py  detect.py  health.py  middleware.py  otel.py  setup.py
agents/python/rukkie_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clockee/: expo video.md
clockee/.claude/: settings.json  settings.local.json
clockee/backend/: DEVELOPMENT.md  package-lock.json  package.json
clockee/expo push notification/: faq.md  fcm-credentials.md  overview.md  push-notifications-setup.md  receiving-notifications.md  sending-notifications-custom.md  sending-notifications.md  what-you-need-to-know.md
clockee/plans/: SUPER_ADMIN_PANEL.md
clockee/students attendance/: STUDENT_EDIT_SUMMARY.md  STUDENT_FEATURES_LOCATION.md  STUDENT_MANAGEMENT_GUIDE.md
cmd/rukkie/: init.go  inspect.go  login.go  root.go  scan.go  shell.go  trace.go  watch.go
dashboard/: netlify.toml  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: apikeys.ts  supabase.ts
docs/: index.html  rukkiepulse-docs.json
github actions/: actions-vs-apps.md  continuous-deployment.md  continuous-integration.md  quickstart.md
installer/: rukkie-setup.iss  rukkie-terminal.bat
internal/auth/: credentials.go  store.go  token.go
internal/cloud/: services.go
internal/config/: config.go
internal/engine/: engine.go  result.go
internal/health/: checker.go
internal/output/: cloud.go  cloudwatch.go  printer.go  shell.go  styles.go  watch.go
internal/probe/: graphql.go  rest.go
internal/trace/: client.go  (+2 more)
plans/: 00-overview.md  01-phase1-cli-foundation.md  02-phase2-scan-engine.md  03-phase3-auth.md  04-phase4-opentelemetry.md  05-phase5-agents.md  06-phase6-tracing-viz.md
rukkieapi/: .env.example  package-lock.json  package.json  server.js
scripts/: migrate.js  seed-user.js
supabase/: schema.sql
(+34 files in other folders)
